--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
-set(TS_FILES UIAList_en_US.ts)
+set(TS_FILES UIAList_en_US.ts UIAList_de_DE.ts)
 
 # Convert SVG icon to PNG and ICO
 find_program(INKSCAPE_EXECUTABLE inkscape)
@@ -71,7 +71,7 @@ endif()
 # Create Qt resource file
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc.in ${CMAKE_CURRENT_BINARY_DIR}/resources.qrc @ONLY)
 
-set(RESOURCE_FILES ${CMAKE_CURRENT_BINARY_DIR}/resources.qrc)
+set(RESOURCE_FILES ${CMAKE_CURRENT_BINARY_DIR}/resources.qrc translations.qrc)
 set_source_files_properties(${RESOURCE_FILES} PROPERTIES OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/uialist_icon.png)
 
 set(PROJECT_SOURCES
@@ -105,7 +105,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 
-    qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
+    # Note: Translation files are compiled manually using lrelease
 else()
     if(ANDROID)
         add_library(UIAList SHARED
@@ -119,7 +119,7 @@ else()
         )
     endif()
 
-    qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
+    # Note: Translation files are compiled manually using lrelease
 endif()
 
 target_link_libraries(UIAList PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
